tests/negative/UnusedOperatorDef.juvix
module UnusedOperatorDef;
  syntax fixity add {arity: binary};
  syntax operator + add;
end ;
